<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context="com.cvpro.competition.ModelManagement.AddModelActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_add_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_card"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/model_details"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/type"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/sp_add_model_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:entries="@array/model_types"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/model_file"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_add_model_file_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/gray" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_file"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_add_model_file_label"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:textColor="@color/gray" />

                    <ImageView
                        android:id="@+id/ic_label_attachment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:src="@drawable/ic_baseline_attach_file"
                        android:contentDescription="@string/todo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/size"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_width_add_model"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_box"
                            android:gravity="center"
                            android:hint="@string/hint_width"
                            android:inputType="number"
                            android:padding="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/x" />

                        <EditText
                            android:id="@+id/et_height_add_model"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/bg_box"
                            android:gravity="center"
                            android:hint="@string/hint_height"
                            android:inputType="number"
                            android:padding="5dp" />

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:background="@drawable/bottom_sheet_background"
                    android:padding="10dp"
                    android:baselineAligned="false">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btn_add_model_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            app:backgroundTint="@color/gray"
                            android:text="@string/cancel"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <Button
                            android:id="@+id/btn_add_model_done"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:text="@string/done" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>




        </RelativeLayout>

    </ScrollView>


</RelativeLayout>