<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_image_classification"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_sheet_background"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="false"
    android:paddingBottom="20dp"
    app:behavior_peekHeight="120dp"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:id="@+id/linrlay"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_centerHorizontal="true"
                android:background="@color/gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/model"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/modelnamesgetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="Modelnames"
                android:textColor="@color/black" />

            <ImageButton
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/setting_black"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:background="@drawable/square"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/frontCameraImageClassification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_camera_flip"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/cameraSwitchImageClassification"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/toggle_selector"
                android:textOff="@string/label_off"
                android:textOn="@string/label_on"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/flashLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/label_flash_light"
                android:textColor="@android:color/black" />

            <ToggleButton
                android:id="@+id/flashlightSwitchImageClassification"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/toggle_selector"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/object"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/objectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/accuracy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/accuracy"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/accuracyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/model"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/model_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:entries="@array/models"
                android:prompt="@string/model" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="device"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/device_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentEnd="true"
                android:entries="@array/devices"
                android:prompt="@string/device" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="17dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Threads"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rectangle"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_remove" />

                <TextView
                    android:id="@+id/threads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_add" />

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/txt"
        android:layout_width="204dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linrlay" />

    <TextView
        android:id="@+id/USB"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:layout_marginTop="75dp"
        android:text="USB"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linrlay" />

    <Button
        android:id="@+id/ON"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="ON  "
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

    <Button
        android:id="@+id/OFF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="OFF"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt" />

</androidx.constraintlayout.widget.ConstraintLayout>
